--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,65 +1,36 @@
-name: Playwright Test Automation
+name: Playwright Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # Step 2: Set up Node.js
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18' # or whatever version you're using
 
-    # Step 3: Install dependencies
-    - name: Install dependencies
-      run: |
-        npm install
+      - name: Install dependencies
+        run: npm ci
 
-    # Step 4: Set up Playwright dependencies (Browsers)
-    - name: Install Playwright Browsers
-      run: |
-        npx playwright install
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-    # Step 5: Set environment variables (optional: secrets should be stored in GitHub's secrets for security)
-    - name: Set up environment variables
-      run: |
-        echo "EMAIL=${{ secrets.EMAIL }}" >> $GITHUB_ENV
-        echo "PASSWORD=${{ secrets.PASSWORD }}" >> $GITHUB_ENV
-        echo "BASE_URL=${{ secrets.BASE_URL }}" >> $GITHUB_ENV
+      - name: Run Playwright tests
+        run: npx playwright test
 
-    # Step 6: Run Playwright tests
-    - name: Run Playwright tests
-      run: |
-        npx playwright test --reporter=html --output=playwright-report
-
-    # Step 7: Upload the test results as an artifact (optional, for debugging purposes)
-    - name: Upload Playwright Report
-      uses: actions/upload-artifact@v3
-      with:
-        name: playwright-report
-        path: playwright-report/
-
-    # Step 8: Optionally, publish the HTML report to GitHub Pages
-    - name: Deploy Playwright Report to GitHub Pages
-      if: success()
-      run: |
-        mkdir gh-pages
-        cp -r playwright-report/* gh-pages/
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add gh-pages
-        git commit -m "Deploy Playwright test results"
-        git push origin gh-pages
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
